기본 함수 추가

--- a/MiniFlt/MiniFlt.vcxproj.Filters
+++ b/MiniFlt/MiniFlt.vcxproj.Filters
@@ -22,9 +22,18 @@
     <ClCompile Include="MiniFlt.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CommFunc.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MiniFlt.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CommFunc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="StdAfx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
