--- a/MiniFlt/MiniFlt.vcxproj
+++ b/MiniFlt/MiniFlt.vcxproj
@@ -78,7 +78,9 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" />
   </ImportGroup>
   <ItemGroup Label="WrappedTaskItems">
+    <ClInclude Include="CommFunc.h" />
     <ClInclude Include="MiniFlt.h" />
+    <ClInclude Include="StdAfx.h" />
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <TargetName>MiniFlt</TargetName>
@@ -167,6 +169,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CommFunc.c" />
     <ClCompile Include="MiniFlt.c" />
     <ResourceCompile Include="MiniFlt.rc" />
   </ItemGroup>
