--- a/MiniFlt/MiniFlt.vcxproj.Filters
+++ b/MiniFlt/MiniFlt.vcxproj.Filters
@@ -25,6 +25,9 @@
     <ClCompile Include="CommFunc.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Context.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MiniFlt.h">
@@ -34,6 +37,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="StdAfx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Context.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
