--- a/MyCSharp/MyCSharpClient/MyCSharpClient.csproj
+++ b/MyCSharp/MyCSharpClient/MyCSharpClient.csproj
@@ -40,5 +40,11 @@
     <Reference Include="System.Data" />
     <Reference Include="System.ServiceModel" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MyCSharpService\MyCSharpService.csproj">
+      <Project>{2315e0b1-d043-4581-990b-c411f452a6be}</Project>
+      <Name>MyCSharpService</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
