--- a/MyCSharp/MyCSharpHost/MyCSharpHost.csproj
+++ b/MyCSharp/MyCSharpHost/MyCSharpHost.csproj
@@ -39,13 +39,26 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Management" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceProcess" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MyCSharpHost.cs" />
+    <Compile Include="Install.cs" />
+    <Compile Include="MyCSharpHost.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="MyCSharpHost.Designer.cs">
+      <DependentUpon>MyCSharpHost.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="MyCSharpHost.resx">
+      <DependentUpon>MyCSharpHost.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyCSharpService\MyCSharpService.csproj">
