--- a/MiniFlt/MiniFlt.vcxproj.Filters
+++ b/MiniFlt/MiniFlt.vcxproj.Filters
@@ -28,6 +28,9 @@
     <ClCompile Include="Context.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AccessControl.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MiniFlt.h">
@@ -40,6 +43,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Context.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AccessControl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ErrorCode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
