--- a/MiniFlt/MiniFlt.vcxproj.Filters
+++ b/MiniFlt/MiniFlt.vcxproj.Filters
@@ -34,6 +34,9 @@
     <ClCompile Include="SystemCallHook.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MiniFltLog.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MiniFlt.h">
@@ -55,6 +58,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SystemCallHook.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MiniFltLog.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
