--- a/KernelDriver/MiniFlt/MiniFlt.vcxproj
+++ b/KernelDriver/MiniFlt/MiniFlt.vcxproj
@@ -84,6 +84,7 @@
     <ClInclude Include="ErrorCode.h" />
     <ClInclude Include="MiniFlt.h" />
     <ClInclude Include="MiniFltLog.h" />
+    <ClInclude Include="MiniWSK.h" />
     <ClInclude Include="StdAfx.h" />
     <ClInclude Include="SystemCallHook.h" />
   </ItemGroup>
@@ -179,6 +180,7 @@
     <ClCompile Include="Context.c" />
     <ClCompile Include="MiniFlt.c" />
     <ClCompile Include="MiniFltLog.c" />
+    <ClCompile Include="MiniWSK.c" />
     <ClCompile Include="SystemCallHook.c" />
     <ResourceCompile Include="MiniFlt.rc" />
   </ItemGroup>
