--- a/KernelDriver/MiniFlt/MiniFlt.vcxproj
+++ b/KernelDriver/MiniFlt/MiniFlt.vcxproj
@@ -110,7 +110,7 @@
       </ExceptionHandling>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>%(AdditionalDependencies);$(DDK_LIB_PATH)\fltMgr.lib;$(DDK_LIB_PATH)\Ksecdd.lib;</AdditionalDependencies>
+      <AdditionalDependencies>%(AdditionalDependencies);$(DDK_LIB_PATH)\fltMgr.lib;$(DDK_LIB_PATH)\Ksecdd.lib;netio.lib;</AdditionalDependencies>
     </Link>
     <Midl>
       <PreprocessorDefinitions>%(PreprocessorDefinitions);POOL_NX_OPTIN=1</PreprocessorDefinitions>
