--- a/KernelDriver/MiniAgentDLL/MiniAgentDLL.vcxproj.filters
+++ b/KernelDriver/MiniAgentDLL/MiniAgentDLL.vcxproj.filters
@@ -21,12 +21,21 @@
     <ClInclude Include="pch.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="MiniAgentDLL.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="MiniAgentDLL.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="AccessControl.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
