--- a/KernelDriver/MiniAgentDLL/MiniAgentDLL.vcxproj.filters
+++ b/KernelDriver/MiniAgentDLL/MiniAgentDLL.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="AccessControl.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="stdafx.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
