--- a/KernelDriver/MiniAgentDLL/MiniAgentDLL.vcxproj
+++ b/KernelDriver/MiniAgentDLL/MiniAgentDLL.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\MiniComm\MiniComm.cpp" />
     <ClCompile Include="AccessControl.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="pch.cpp">
