--- a/KernelDriver/MiniAgentDLL/MiniAgentDLL.vcxproj
+++ b/KernelDriver/MiniAgentDLL/MiniAgentDLL.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\MiniComm\MiniComm.h" />
     <ClInclude Include="AccessControl.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="MiniAgentDLL.h" />
