--- a/MyCSharp/MyCSharpService/MyCSharpService.csproj
+++ b/MyCSharp/MyCSharpService/MyCSharpService.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommFunc.cs" />
     <Compile Include="MyCSharpService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
