--- a/MyCSharp/MyCSharpService/MyCSharpService.csproj
+++ b/MyCSharp/MyCSharpService/MyCSharpService.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="CommFunc.cs" />
     <Compile Include="MyCSharpService.cs" />
+    <Compile Include="NativeAPI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
