--- a/MyCSharp/MyCSharpService/MyCSharpService.csproj
+++ b/MyCSharp/MyCSharpService/MyCSharpService.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccessControl.cs" />
+    <Compile Include="CommDefine.cs" />
     <Compile Include="CommFunc.cs" />
     <Compile Include="MyCSharpService.cs" />
     <Compile Include="NativeAPI.cs" />
